# bitwise-data-processor

./: CMakeLists.txt  Dockerfile  README.md  main.cc  setEnv  small_test.cc
data_processor_v2/: Dockerfile  data_processor_v2.py  docker-compose.yml  requrements.txt
include/: data_analyzer.h  data_downloader.h  data_sender.h  data_worker.h  utils.h
logging/src/: log.c
src/: data_analyzer.cc  data_downloader.cc  data_sender.cc  data_worker.cc
tools/: file_generator.cpp
tools/result_collect_server/: Dockerfile  main.py
tools/source_server/: Dockerfile  cmd  main.py  random_bits.txt
